// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFloater with \`component\` as element should show the floater with click 1`] = `
<div
  class="__floater"
  id="test"
  role="tooltip"
  style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; z-index: 1000; padding: 16px 0px 0px;"
>
  <div
    class="__floater__body"
  >
    <div
      class="sc-bdvvtL eXvXcQ"
    >
      <div>
        Styled
      </div>
      <button
        type="button"
      >
        close
      </button>
    </div>
    <span
      class="__floater__arrow"
      style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
    >
      <svg
        height="16"
        version="1.1"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          fill="#fff"
          points="32,16 16,0 0,16"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ReactFloater with \`component\` as function should show the floater with click 1`] = `
<div
  class="__floater"
  id="test"
  role="tooltip"
  style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 16px 0px 0px;"
>
  <div
    class="__floater__body"
  >
    <div
      class="sc-bdvvtL eXvXcQ"
    >
      <div>
        Styled
      </div>
      <button
        type="button"
      >
        close
      </button>
    </div>
    <span
      class="__floater__arrow"
      style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
    >
      <svg
        height="16"
        version="1.1"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          fill="#fff"
          points="32,16 16,0 0,16"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ReactFloater with \`placement\` center should show the floater with click 1`] = `
<div
  class="__floater"
  id="test"
  role="tooltip"
  style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: fixed; transition: opacity 0.3s; visibility: visible; left: 50%; top: 50%; transform: translate(-50%, -50%);"
>
  <div
    class="__floater__body"
  >
    <div
      class="__floater__container"
      style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
    >
      <div
        class="__floater__content"
        style="font-size: 15px;"
      >
        Hello! This is my content!
      </div>
    </div>
  </div>
</div>
`;

exports[`ReactFloater with \`placement\` top should show the floater with click 1`] = `
<div
  class="__floater"
  id="test"
  role="tooltip"
  style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 0px 0px 16px;"
>
  <div
    class="__floater__body"
  >
    <div
      class="__floater__container"
      style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
    >
      <div
        class="__floater__content"
        style="font-size: 15px;"
      >
        Hello! This is my content!
      </div>
    </div>
    <span
      class="__floater__arrow"
      style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); bottom: 0px;"
    >
      <svg
        height="16"
        version="1.1"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          fill="#fff"
          points="0,0 16,16 32,0"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`ReactFloater with \`title\`, \`footer\` and \`closeBtn\` should render the floater 1`] = `
<div
  class="__floater __floater__open"
  id="test"
  role="tooltip"
  style="display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 300px; opacity: 1; position: relative; transition: opacity 0.3s; visibility: visible; padding: 16px 0px 0px;"
>
  <div
    class="__floater__body"
  >
    <div
      class="__floater__container"
      style="background-color: rgb(255, 255, 255); color: rgb(102, 102, 102); min-height: 60px; min-width: 200px; padding: 20px; position: relative; z-index: 10;"
    >
      <button
        aria-label="close"
        style="background-color: transparent; border: 0px; border-radius: 0; font-size: 0px; outline: none; padding: 10px; position: absolute; right: 0px; top: 0px;"
        type="button"
      >
        <svg
          height="15px"
          preserveAspectRatio="xMidYMid"
          version="1.1"
          viewBox="0 0 18 18"
          width="15px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
              fill="#555"
            />
          </g>
        </svg>
      </button>
      <div
        class="__floater__title"
        style="border-bottom: 1px solid #555; color: rgb(85, 85, 85); font-size: 18px; margin-bottom: 5px; padding-bottom: 6px; padding-right: 18px;"
      >
        Title
      </div>
      <div
        class="__floater__content"
        style="font-size: 15px;"
      >
        Hello! This is my content!
      </div>
      <div
        class="__floater__footer"
        style="border-top: 1px solid #ccc; font-size: 13px; margin-top: 10px; padding-top: 5px;"
      >
        Footer
      </div>
    </div>
    <span
      class="__floater__arrow"
      style="display: inline-flex; position: absolute; left: 0px; transform: translate(8px, 0px); top: 0px;"
    >
      <svg
        height="16"
        version="1.1"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          fill="#fff"
          points="32,16 16,0 0,16"
        />
      </svg>
    </span>
  </div>
</div>
`;
